--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -14,8 +14,8 @@
   </span>
 {% endblock panel_actions %}
 {% block panel_content %}
-  Quantity:
-  {{ stock.remaining_quantity }} {{ stock.remaining_unit }}
+  <p>Remaining quantity:  {{ stock.remaining_quantity }} {{ stock.remaining_unit }}</p>
+  <p>In-use date: {{ in_use_date|date:"d/m/Y"|default:"not yet in-use" }}</p>
   {# update time #}
   {% include "partials/object_last_updated.html" %}
 {% endblock panel_content %}
