--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -235,3 +235,50 @@ a:hover {
     opacity: 0;
   }
 }
+
+
+/* callout classes */
+.callout-thin {
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border: 1px solid #e9ecef;
+  border-left-width: 0.25rem;
+  border-radius: 0.25rem;
+}
+.callout {
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border: 1px solid #e9ecef;
+  border-left-width: 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.callout-primary {
+  border-left-color: var(--bs-primary);
+}
+.callout-secondary {
+  border-left-color: var(--bs-secondary);
+}
+.callout-success {
+  border-left-color: var(--bs-success);
+}
+.callout-danger {
+  border-left-color: var(--bs-danger);
+}
+.callout-warning {
+  border-left-color: var(--bs-warning);
+}
+.callout-info {
+  border-left-color: var(--bs-info);
+}
+.callout-light {
+  border-left-color: var(--bs-light);
+}
+.callout-dark {
+  border-left-color: var(--bs-dark);
+}
+.callout-item {
+  border-left-color: var(--rt-item);
+}
