delivery removed created_by use only received_by

--- a/delivery/templates/delivery/delivery_create.html
+++ b/delivery/templates/delivery/delivery_create.html
@@ -8,31 +8,14 @@
 {% block create_form %}
   <div class="pt-3 px-3">
     <div id="div_id_delivery_date" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Delivery Date*:</span>
-      <input type="datetime-local"
-             name="delivery_date"
-             value="{{ form.delivery_date.value|default_if_none:'' }}"
-             class="dateinput form-control"
-             required
-             id="id_delivery_date">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.delivery_date.label_tag }}</span>
+      {{ form.delivery_date }}
     </div>
-    <div id="div_id_received_by" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Received By*:</span>
-      <select name="received_by"
-              class="select form-select"
-              value="{{ form.received_by.value|default_if_none:'' }}"
-              required
-              id="id_received_by">
-        {% for user in form.fields.received_by.queryset %}
-          <option value="{{ user.pk }}"
-                  {% if user.pk == form.received_by.value %}selected{% endif %}>{{ user }}</option>
-        {% endfor %}
-      </select>
-    </div>
+    <span class="text-danger">{{ form.delivery_date.errors }}</span>
     <div id="div_id_notes"  class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Notes:</span>
-      <textarea name="notes" cols="40" rows="3" class="textarea form-control" id="id_notes">{{ form.notes.value|default_if_none:'' }}
-</textarea>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.notes.label_tag }}</span>
+      {{ form.notes }}
     </div>
+    <span class="text-danger">{{ form.notes.errors }}</span>
   </div>
 {% endblock create_form %}
