--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -3,7 +3,7 @@
   Companies
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-buildings company-text-color"></i>  Companies
+  <i class="bi bi-buildings company-text-color"></i>  Companies
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'company_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New company</a>
@@ -15,7 +15,8 @@
         <tr>
           <th width="20%">Company</th>
           <th width="25%" class="d-none d-lg-table-cell">Description</th>
-          <th class="text-center d-none d-lg-table-cell">Made/Supplied</th>
+          <th class="text-center d-none d-lg-table-cell">Manufactured</th>
+          <th class="text-center d-none d-lg-table-cell">Supplied</th>
           <th class="text-center d-lg-table-cell">Phone</th>
           <th>Website</th>
           <th width="5%" class=" d-lg-table-cell">Actions</th>
@@ -29,18 +30,16 @@
             </td>
             <td class="d-none d-lg-table-cell small">{{ company.description|truncatechars:50 }}</td>
             <td class="text-center d-none d-lg-table-cell">
-              <div class="row">
-                <div class="col-6 text-end">
-                  <span class="badge rounded-pill" style="background-color: var(--bs-yellow)">{{ company.manufactured_items.count|default:"" }}</span>
-                </div>
-                <div class="col-6 text-start">
-                  <span class="badge rounded-pill" style="background-color: var(--bs-blue);">{{ company.supplied_items.count|default:"" }}</span>
-                </div>
-              </div>
+              <span><a href="{% url 'company_detail' company.pk %}#manufactured">{{ company.manufactured_items.count|default:"" }}</a></span>
+            </td>
+            <td class="text-center d-none d-lg-table-cell">
+              <span><a href="{% url 'company_detail' company.pk %}#supplied">{{ company.supplied_items.count|default:"" }}</a></span>
             </td>
             <td class="text-center d-lg-table-cell">{{ company.phone }}</td>
             <td>
-              <a href="{{ company.website }}" title="Visit {{ company.website }}" target="blank">{{ company.website }}</a>
+              <a href="{{ company.website }}"
+                 title="Visit {{ company.website }}"
+                 target="blank">{{ company.website }}</a>
             </td>
             <td class="d-lg-table-cell">
               <a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a>
