--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -44,6 +44,7 @@
   </div>
   {# manufactured_items #}
   {% if company.manufactured_items.count > 0 %}
+    <a id="manufactured"></a>
     <div class="panel mx-3 my-4">
       <div class="panel-heading">
         <span class="h5">Items Manufactured</span>
@@ -59,6 +60,7 @@
   {% endif %}
   {# supplied_items #}
   {% if company.supplied_items.count > 0 %}
+    <a id="supplied"></a>
     <div class="panel mx-3 my-4">
       <div class="panel-heading">
         <span class="h5">Items Supplied</span>
