--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -15,63 +15,56 @@
   </span>
 {% endblock panel_actions %}
 {% block panel_content %}
-  <div class="row p-3">
-    {# image #}
-    <div class="col-lg-3 text-center">
-      <img src="{% static item.image|default:'images/item/item_no_photo.png' %}"
-           width="200"
-           height="150"
-           alt="{% if item.image %}{{ item.name }} photo{% else %}no photo{% endif %}">
-    </div>
-    {# details #}
-    <div class="col-lg-9">
-      <div class="panel" style="min-height: 150px; border: 0;">
-        <div class="panel-content">
-          <table class="table table-sm table-borderless">
-            <tbody>
-              <tr>
-                <td width="15%" class="text-muted">Product ID:</td>
-                <td width="35%">{{ item.product_id }}</td>
-                <td width="15%" class="text-muted">Category:</td>
-                <td width="35%">
-                  <a href="{% url 'category_detail' item.category.pk %}"
-                     title="{{ item.category }}">{{ item.category }}</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-muted">Quantity:</td>
-                <td>{{ item.quantity|default:""|floatformat }} {{ item.quantity_unit|default:"" }}</td>
-                <td class="text-muted">CAS Number:</td>
-                <td>
-                  {% if item.cas_number %}
-                    <i class="bi bi-link-45deg"></i>
-                    <a href="https://commonchemistry.cas.org/detail?cas_rn={{ item.cas_number }}"
-                       target="blank"
-                       title="More chemical details">{{ item.cas_number }}</a>
-                  {% else %}
-                    &nbsp;
-                  {% endif %}
-                </td>
-              </tr>
-              <tr>
-                <td class="text-muted">Manufacturer:</td>
-                <td>
-                  <a href="{% url 'company_detail' item.manufacturer.pk %}"
-                     title="{{ item.manufacturer }}">{{ item.manufacturer }}</a>
-                </td>
-                <td class="text-muted">Supplier:</td>
-                <td>
-                  <a href="{% url 'company_detail' item.supplier.pk %}"
-                     title="{{ item.supplier }}">{{ item.supplier }}</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-muted">Description:</td>
-                <td colspan="3">{{ item.description }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+  <div class="p-3">
+    <div class="panel">
+      <div class="panel-heading d-flex justify-content-between">
+        <span class="fw-bold"><i class="bi bi-info-circle-fill item-text-color"></i> Item Details</span>
+      </div>
+      <div class="panel-content">
+        <table class="table table-sm table-borderless">
+          <tbody>
+            <tr>
+              <td width="15%" class="text-muted">Product ID:</td>
+              <td width="35%">{{ item.product_id }}</td>
+              <td width="15%" class="text-muted">Category:</td>
+              <td width="35%">
+                <a href="{% url 'category_detail' item.category.pk %}"
+                   title="{{ item.category }}">{{ item.category }}</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="text-muted">Quantity:</td>
+              <td>{{ item.quantity|default:""|floatformat }} {{ item.quantity_unit|default:"" }}</td>
+              <td class="text-muted">CAS Number:</td>
+              <td>
+                {% if item.cas_number %}
+                  <i class="bi bi-link-45deg"></i>
+                  <a href="https://commonchemistry.cas.org/detail?cas_rn={{ item.cas_number }}"
+                     target="blank"
+                     title="More chemical details">{{ item.cas_number }}</a>
+                {% else %}
+                  &nbsp;
+                {% endif %}
+              </td>
+            </tr>
+            <tr>
+              <td class="text-muted">Manufacturer:</td>
+              <td>
+                <a href="{% url 'company_detail' item.manufacturer.pk %}"
+                   title="{{ item.manufacturer }}">{{ item.manufacturer }}</a>
+              </td>
+              <td class="text-muted">Supplier:</td>
+              <td>
+                <a href="{% url 'company_detail' item.supplier.pk %}"
+                   title="{{ item.supplier }}">{{ item.supplier }}</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="text-muted">Description:</td>
+              <td colspan="3">{{ item.description }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
