--- a/item/templates/item/item_update.html
+++ b/item/templates/item/item_update.html
@@ -10,12 +10,12 @@
   <div class="px-3 pt-3">
     <span class="text-danger">{{ form.non_field_errors }}</span>
     <div id="div_id_name" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}*</span>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
       {{ form.name }}
     </div>
     <span class="text-danger">{{ form.name.errors }}</span>
     <div id="div_id_product_id" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">{{ form.product_id.label_tag }}*</span>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.product_id.label_tag }}</span>
       {{ form.product_id }}
     </div>
     {# cas number #}
