--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -1,4 +1,5 @@
 {% extends "object_detail_base.html" %}
+{% load stock_tags %}
 {% block title %}
   Stock
 {% endblock title %}
@@ -18,7 +19,10 @@
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between">
         <span class="fw-bold"><i class="bi bi-info-circle-fill stock-text-color"></i> Stock Details</span>
-        <span class="pe-2"><i class="bi bi-card-checklist text-success"></i></span>
+        <span class="pe-2">
+          <a href=" {% if stock.validations|length %}{% url 'validation_detail' 'stock' stock.pk %}{% else %}javascript:{% endif %}">Validations:
+          {% validation_status stock.validations.0.status %}</a>
+          </span>
       </div>
       <div class="panel-content">
         <table class="table table-sm table-borderless">
